--- a/klein2012structured_RIA/scirl_ria.bib
+++ b/klein2012structured_RIA/scirl_ria.bib
@@ -1,7 +1,7 @@
 @ARTICLE{Muno007,
   AUTHOR =       {Rémi Munos},
   TITLE =        {{Performance bounds in $L_p$ norm for approximate value iteration}},
-  JOURNAL =      {SIAM journal on control and optimization},
+  JOURNAL =      {{SIAM journal on control and optimization}},
   YEAR =         {2007},
   volume =       {46},
   number =       {2},
@@ -11,20 +11,20 @@
 @BOOK{Puterma994,
   AUTHOR = {Puterman, Martin  L. },
   PUBLISHER = {Wiley-Interscience},
-  TITLE = {Markov Decision Processes: Discrete Stochastic Dynamic Programming},
+  TITLE = {{Markov Decision Processes: Discrete Stochastic Dynamic Programming}},
   YEAR = {1994}
 }
 
 @book{szepesvari2010c,
     Author = {Szepesv{\'a}ri, Csaba},
     Publisher = {Morgan and Claypool},
-    Title = {Algorithms for Reinforcement Learning},
+    Title = {{Algorithms for Reinforcement Learning}},
     Year = {2010}
 }
 
 @book{SigBuf-mdpai10,
 editor = {O. Sigaud and O. Buffet},
-title = {Markov Decision Processes and Artificial Intelligence},
+title = {{Markov Decision Processes and Artificial Intelligence}},
 publisher = {Wiley - ISTE},
 address = {},
 pages = {480},
@@ -36,7 +36,7 @@ year = {2010}
     howpublished = {Hardcover},
     month = {March},
     publisher = {The MIT Press},
-    title = {Reinforcement Learning: An Introduction},
+    title = {{Reinforcement Learning: An Introduction}},
     year = {1998},
     edition = {3rd}
 }
@@ -51,21 +51,21 @@ year = {2010}
 
 @INPROCEEDINGS{N000,
   AUTHOR = {Andrew Y. Ng and Stuart Russell},
-  TITLE = {{Algorithms for Inverse Reinforcement Learning}},
-  BOOKTITLE = {Proceedings of 17th International Conference on Machine Learning (ICML)},
+  TITLE = {{Algorithms for inverse reinforcement learning}},
+  BOOKTITLE = {{Proceedings of 17th International Conference on Machine Learning (ICML)}},
   YEAR = {2000}
 }
 
 @INPROCEEDINGS{Klei011,
 author = {Edouard Klein and Matthieu Geist and Olivier Pietquin},
-title = {{Batch, Off-policy and Model-free Apprenticeship Learning}},
+title = {{Batch, off-policy and model-free apprenticeship learning}},
 year = {2011},
 booktitle = {{Proceedings of the European Workshop on Reinforcement Learning (EWRL)}}
 }
 
 @ARTICLE{Guermeu007,
   AUTHOR =       {Yann Guermeur},
-  TITLE =        {{VC thoery of large margin multi-category classifiers}},
+  TITLE =        {{VC theory of large margin multi-category classifiers}},
   JOURNAL =      {Journal of Machine Learning Research},
   YEAR =         {2007},
   volume =       {8},
@@ -74,14 +74,14 @@ booktitle = {{Proceedings of the European Workshop on Reinforcement Learning (EW
 
 @INPROCEEDINGS{Taska005,
   AUTHOR =       {Ben Taskar and Vassil Chatalbashev and Daphne Koller and Carlos Guestrin},
-  TITLE =        {{Learning Structured Prediction Models: a Large Margin Approach}},
-  BOOKTITLE =    {Proceedings of 22nd International Conference on Machine Learning (ICML)},
+  TITLE =        {{Learning structured prediction models: a large margin approach}},
+  BOOKTITLE =    {{Proceedings of 22nd International Conference on Machine Learning (ICML)}},
   YEAR =         {2005}
 }
 
 @ARTICLE{Bradtk996,
   AUTHOR =       {Steven J. Bradtke and Andrew G. Barto},
-  TITLE =        {{Linear Least-Squares algorithms for temporal difference learning}},
+  TITLE =        {{Linear least-squares algorithms for temporal difference learning}},
   JOURNAL =      {Machine Learning},
   YEAR =         {1996},
   volume =       {22},
@@ -91,57 +91,57 @@ booktitle = {{Proceedings of the European Workshop on Reinforcement Learning (EW
 
 @inproceedings{Ratlif006,
    author = "Nathan Ratliff and Andrew D. Bagnell and Martin Zinkevich",
-   title = {{Maximum Margin Planning}},
-   booktitle = "Proceedings of the 23rd International Conference on Machine Learning (ICML)",
+   title = {{Maximum margin planning}},
+   booktitle = {{Proceedings of the 23rd International Conference on Machine Learning (ICML)}},
    year = "2006",
 }
 
 @inproceedings{Russel998,
  author = {Russell, Stuart},
  title = {Learning agents for uncertain environments (extended abstract)},
- booktitle = {Proceedings of the 11th annual Conference on Computational Learning Theory (COLT)},
+ booktitle = {{Proceedings of the 11th annual Conference on Computational Learning Theory (COLT)}},
  year = {1998},
 }
 
 @inproceedings{Abbee004,
  author = {Abbeel, Pieter and Ng, Andrew Y.},
  title = {Apprenticeship learning via inverse reinforcement learning},
- booktitle = {Proceedings of the 21st International Conference on Machine learning (ICML)},
+ booktitle = {{Proceedings of the 21st International Conference on Machine learning (ICML)}},
  year = {2004},
 }
 
 @inproceedings{sye010,
- title = {{A Reduction from Apprenticeship Learning to Classification}},
+ title = {{A Reduction from apprenticeship learning to classification}},
  author = {Umar Syed and Robert Schapire},
- booktitle = {Advances in Neural Information Processing Systems 23 (NIPS)},
+ booktitle = {{Advances in Neural Information Processing Systems 23 (NIPS)}},
  year = {2010}
 }
 
 @inproceedings{Sye00p,
  author = {Syed, Umar and Bowling, Michael and Schapire, Robert E.},
  title = {Apprenticeship learning using linear programming},
- booktitle = {Proceedings of the 25th International Conference on Machine learning (ICML)},
+ booktitle = {{Proceedings of the 25th International Conference on Machine learning (ICML)}},
  year = {2008}
 }
 
 @inproceedings{Sye00ame,
- title = {A Game-Theoretic Approach to Apprenticeship Learning},
+ title = {A game-theoretic approach to apprenticeship learning},
  author = {Umar Syed and Robert Schapire},
- booktitle = {Advances in Neural Information Processing Systems 20 (NIPS)},
+ booktitle = {{Advances in Neural Information Processing Systems 20 (NIPS)}},
  year = {2008}
 }
 
 @INPROCEEDINGS{Ziebar008,
   AUTHOR = {Ziebart, Brian D. and Maas, Andrew and Bagnell, J. Andrew and Dey, Anind K.},
   TITLE = {Maximum entropy inverse reinforcement learning},
-  BOOKTITLE = {Proceedings of the 23rd national conference on Artificial intelligence (AAAI)},
+  BOOKTITLE = {{Proceedings of the 23rd national conference on Artificial intelligence (AAAI)}},
   YEAR = {2008}
 }
 
 @inproceedings{Ramachandra007,
   author = {Ramachandran, Deepak and Amir, Eyal},
   title = {Bayesian inverse reinforcement learning},
-  booktitle = {Proceedings of the 20th International Joint Conference on Artifical Intelligence (IJCAI)},
+  booktitle = {{Proceedings of the 20th International Joint Conference on Artifical Intelligence (IJCAI)}},
   year = {2007}
 }
 
@@ -154,7 +154,7 @@ booktitle = {{Proceedings of the European Workshop on Reinforcement Learning (EW
 
 @ARTICLE{Ne010,
   AUTHOR =       {Gergely Neu and Czaba Szepesvari},
-  TITLE =        {{Training Parsers by Inverse Reinforcement Learning}},
+  TITLE =        {{Training parsers by inverse reinforcement learning}},
   JOURNAL =      {Machine Learning},
   YEAR =         {2009},
   volume =       {77},
@@ -163,24 +163,24 @@ booktitle = {{Proceedings of the European Workshop on Reinforcement Learning (EW
 }
 
 @Inproceedings {boularia011,
-   title = {Relative Entropy Inverse Reinforcement Learning},
+   title = {Relative entropy inverse reinforcement learning},
    year = {2011},
-   booktitle = {JMLR Workshop and Conference Proceedings Volume 15: AISTATS 2011},
+   booktitle = {{JMLR Workshop and Conference Proceedings Volume 15: AISTATS 2011}},
    author = {Boularias, Abdeslam and Kober, Jens and Peters, Jan}
 }
 
 @inproceedings{Mel010,
  author = {Melo, Francisco S. and Lopes, Manuel},
  title = {{Learning from demonstration using MDP induced metrics}},
- booktitle = {Proceedings of the European Conference on Machine Learning (ECML)},
+ booktitle = {{Proceedings of the European Conference on Machine Learning (ECML)}},
  year = {2010}
 }
 
 @inproceedings{Dvi010,
   author    = {Krishnamurthy Dvijotham and
                Emanuel Todorov},
-  title     = {{Inverse Optimal Control with Linearly-Solvable MDPs}},
-  booktitle = {Proceedings of the 27th International Conference on Machine
-               Learning (ICML)},
+  title     = {{Inverse optimal control with linearly-solvable MDPs}},
+  booktitle = {{Proceedings of the 27th International Conference on Machine
+               Learning (ICML)}},
   year      = {2010}
 }
