Prise en compte des suggestions des reviewers 2 et 3 de RIA.

--- a/klein2012structured_RIA/scirl_ria.bib
+++ b/klein2012structured_RIA/scirl_ria.bib
@@ -1,3 +1,15 @@
+@article{abbeel2010autonomous,
+	Author = {Abbeel, P. and Coates, A. and Ng, A.Y.},
+	Date-Added = {2011-10-13 08:49:11 +0000},
+	Date-Modified = {2011-10-21 08:25:17 +0000},
+	Journal = {International Journal of Robotics Research},
+	Keywords = {Toto},
+	Number = {13},
+	Pages = {1608--1639},
+	Title = {Autonomous helicopter aerobatics through apprenticeship learning},
+	Volume = {29},
+	Year = {2010}}
+
 @ARTICLE{Muno007,
   AUTHOR =       {Rémi Munos},
   TITLE =        {{Performance bounds in $L_p$ norm for approximate value iteration}},
