--- a/klein2012structured_RIA/scirl_ria.tex
+++ b/klein2012structured_RIA/scirl_ria.tex
@@ -77,7 +77,7 @@ Metz, France}{}
 \section{Introduction}
 \label{sentro}
 
-L'Apprentissage par Renforcement Inverse (ARI)~\cite{Russel998} est le problème lié à la recherche, à partir de démonstrations d'un expert, d'une fonction de récompense telle que le comportement de l'expert soit optimal. Beaucoup d'algorithmes d'ARI (que nous décrirons succintement Sec.~\ref{seelatedWorks}) cherchent une fonction de récompense dont la politique optimale associée génère une distribution sur les trajectoires (ou une grandeur liée à cette distribution) proche de celle générée par l'expert. Souvent, cette distribution est caractérisée par ce que l'on appelle l'attribut moyen (voir Sec.~\ref{subseackgrounrl}) : étant donnée une fonction de récompense linéairement paramétrée par un vecteur d'attributs, il s'agit de l'espérance de la somme pondérée des vecteurs d'attributs sachant que l'on commence dans un certain état en choisissant une certaine action avant de suivre la politique concernée.
+L'Apprentissage par Renforcement Inverse (ARI) est le problème lié à la recherche, à partir de démonstrations d'un expert, d'une fonction de récompense telle que le comportement de l'expert soit optimal ; historiquement proposé dans~\cite{Russel998}, ce mécanisme trouve des applications dans divers champs, de la biologie à la neuropsychologie en passant par l'économie et plus récemment la robotique~\cite{abbeel2010autonomous}. Beaucoup d'algorithmes d'ARI (que nous décrirons succintement Sec.~\ref{seelatedWorks}) cherchent une fonction de récompense dont la politique optimale associée génère une distribution sur les trajectoires (ou une grandeur liée à cette distribution) proche de celle générée par l'expert. Souvent, cette distribution est caractérisée par ce que l'on appelle l'attribut moyen (voir Sec.~\ref{subseackgrounrl}) : étant donnée une fonction de récompense linéairement paramétrée par un vecteur d'attributs, il s'agit de l'espérance de la somme pondérée des vecteurs d'attributs sachant que l'on commence dans un certain état en choisissant une certaine action avant de suivre la politique concernée.
 
 Dans cette publication, nous choisissons une autre option. Il est possible d'imiter le comportement de l'expert via un algorithme d'apprentissage supervisé généralisant l'association des actions aux états. Nous considérons ici les classifieurs multi-classes qui à partir d'une base d'entraînement calculent les paramètres d'une fonction de score paramétrée linéairement ; la règle de décision pour un état est l'argument (l'action) qui maximise la fonction de score pour cet état (voir Sec.~\ref{subseackgrounlassif}). L'idée de base de l'algorithme SCIRL que nous proposons est simplement d'estimer l'attribut moyen de l'expert comme la paramétrisation de la fonction de score (voir Sec.~\ref{subsecirlgo}). Le vecteur de paramètres ainsi calculé définit une fonction de récompense dont on montre qu'elle admet pour politique quasi-optimale la politique de l'expert (voir Sec.~\ref{subsecirnalysis}).
 
@@ -90,7 +90,7 @@ De plus, à l'aide d'une heuristique, SCIRL peut s'éxécuter en utilisant uniqu
 \subsection{Apprentissage par Renforcement (Inverse)}
 \label{subseackgrounrl}
 
-Un Processus Décisionnel de Markov (PDM)~\cite{Puterma994} est donné par le tuple $\{\s,\A,\p,\R,\gamma\}$ où $\s$ est l'espace d'état fini\footnote{Cette contribution peut être étendue aux espaces d'état compacts moyennant le traitement de certains détails techniques.}, $\A$ est l'espace d'action fini, $\p =
+Un Processus Décisionnel de Markov (PDM)~\cite{Puterma994} est donné par le tuple $\{\s,\A,\p,\R,\gamma\}$ où $\s$ est l'espace d'état fini, $\A$ est l'espace d'action fini, $\p =
 \{P_a = (p(s'|s,a))_{1\leq s,s'\leq |\s|}, a\in\A\}$ est l'ensemble des probabilités de transition markoviennes, $\R\in\mathbb{R}^\s$ est la fonction de récompense sur les états et $\gamma$ est le facteur d'oubli.
 Une politique déterministe $\pi\in\s^\A$ définit le comportement d'un agent. La qualité de ce comportement est quantifiée par le biais de la fonction de valeur $v_\R^\pi\in\mathbb{R}^\s$, qui à chaque état associe la récompense pondérée cumulée moyenne recueillie par l'agent lorsqu'il part de cet état et suit la politique $\pi$ par la suite : $v_\R^\pi(s) = \E[\sum_{t\geq 0} \gamma^t \R(S_t)|S_0=s,\pi]$. Une politique optimale $\pi_\R^*$ (vis-à-vis de la fonction de récompense $\R$) est une politique dont la fonction de valeur $v^*_\R$ vérifie $v_\R^* \geq v_\R^\pi$ (composante par composante) pour toute politique $\pi$.
 
@@ -142,7 +142,7 @@ Soit $\X$ un ensemble fini ou compact (d'entrées à classifier)
  et soit $\Y$ un ensemble fini (de labels). Supposons que les entrées $x\in
 \X$ sont tirées selon une distribution inconnue $\prob(x)$ et qu'il existe un oracle qui à chacune de ces entrées associe un label $y\in Y$ tiré selon une distribution de probabilité conditionnelle inconnue $\prob(y|x)$. De manière générale, la classification multi-classe cherche, étant donné une base d'entraînement $\{(x_i,y_i)_{1\leq i \leq N}\}$ tirée selon $\prob(x,y)$, une règle de décision $g\in\Y^\X$ minimisant l'erreur de classification $\E[\chi_{\{g(x)\neq y\}}] = \prob(g(x)\neq y)$, où $\chi$ est la fonction indicatrice.
 
-Nous nous préoccupons ici d'un ensemble plus réduit de classifieurs. Nous supposons que la règle de décision associe à l'entrée l'argument qui maximise une certaine fonction de score, celle-ci étant paramétrée linéairement, les paramètres étant appris par le classifieur. Formellement, soit $\psi(s,a) =
+Nous nous préoccupons ici d'un ensemble plus réduit de classifieurs. Nous supposons que la règle de décision associe à l'entrée l'argument qui maximise une certaine fonction de score, celle-ci étant paramétrée linéairement, les paramètres étant appris par le classifieur. Formellement, soit $\psi(x,y) =
 (\psi_1(x,y)  \dots  \psi_d(x,y))^\top\in \mathbb{R}^d$
 %\begin{pmatrix}   \psi_1(x,y) & \dots & \psi_d(x,y)
 %\end{pmatrix}^\top \in \mathbb{R}^d$
@@ -150,7 +150,7 @@ un vecteur d'attributs dont les composantes sont $d$ fonctions de base $\psi_i\i
 i\leq N}\}$, un classifieur multi-classe (noté CMC) à fonction de score paramétrée linéairement choisit un vecteur de paramètres $\theta_c$. La qualité de ce choix est quantifiée par l'erreur de classification $\epsilon_c =
 \prob(g_{\theta_c}(x)\neq y)$. %Riflette
 
-Notre étude est valable pour tout algorithme de classification tant qu'il opère en maximisant l'argument d'une fonction de score paramétrée linéairement. Par exemple, un séparateur à vaste marge multi-classe pourrait être choisie~\cite{Guermeu007} (en considérant le noyau induit par le vecteur d'attributs) ou encore une approche à vaste marge structurée~\cite{Taska005}. D'autres choix sont possibles.
+Notre étude est valable pour tout algorithme de classification tant qu'il opère en maximisant l'argument d'une fonction de score paramétrée linéairement. Par exemple, un séparateur à vaste marge multi-classe pourrait être choisie~\cite{Guermeu007} (en considérant le noyau induit par le vecteur d'attributs) ou encore une approche à vaste marge structurée~\cite{Taska005}. 
 
 \section{Classification structurée pour l'apprentissage par renforcement inverse} \label{secirl}
 
@@ -175,7 +175,7 @@ Supposons également avoir à disposition une estimée $\hat{\mu}^{\pi_E}$ de l'
   une estimée $\hat{\mu}^{\pi_E}$ de l'attribut moyen de l'expert $\mu^{\pi_E}$ et un algorithme de CMC\;
   %
   \BlankLine
-  \emph{\textbf{Calculer}} le vecteur de paramètres $\theta_c$ en utilisant l'algorithme de CMC auquel sont fournis la base d'entraînement $\D$ et la paramétrisation de la fonction de score : $\theta^\top\hat{\mu}^{\pi_E}(s,a)$\;
+  \emph{\textbf{Calculer}} le vecteur de paramètres $\theta_c$ en utilisant l'algorithme de CMC auquel sont fournis la base d'entraînement $\D$ et la paramétrisation de la fonction de score : $s_\theta(s,a) = \theta^\top\hat{\mu}^{\pi_E}(s,a)$\;
   %
   \BlankLine
   \emph{\textbf{Renvoyer}} la fonction de récompense $\R_{\theta_c}(s) = \theta_c^\top\phi(s)$ \;
@@ -343,7 +343,7 @@ $\R_{\theta_c}$ vis-à-vis de laquelle l'expert sera quasi-optimal. Un corollair
 $\R_{\theta_c}$.
 
 Certains allègueraient que ces bornes sont trivialement valables pour la fonction de récompense nulle (fonction régulièrement citée comme exemple de la nature mal posée du problème de l'ARI) correspondant au cas $\theta_c=0$. Cependant il faut se rappeler que le vecteur de paramètres $\theta_c$ est choisi par le classifieur. Avec 
-$\theta_c=0$, la règle de décision serait une politique aléatoire uniforme et nous aurions $\epsilon_c = \frac{|\A|-1}{|\A|}$, c'est-à-dire la pire erreur de classification possible. Ce cas est donc très improbable. De fait, nous affirmons que notre approche permet, d'une certaine manière, de lever l'ambiguïté du problème de l'ARI (au moins, l'algorithme ne renvoie pas de récompense triviale comme la récompense nulle).
+$\theta_c=0$, la règle de décision serait une politique aléatoire uniforme et nous aurions $\epsilon_c = \frac{|\A|-1}{|\A|}$, c'est-à-dire la pire erreur de classification possible. Des mécanismes de régularisation dépendant du classifieur choisi peuvent être employés pour éviter cela. De fait, nous affirmons que notre approche permet, d'une certaine manière, de lever l'ambiguïté du problème de l'ARI (au moins, l'algorithme ne renvoie pas de récompense triviale comme la récompense nulle).
 %
 Cette borne est invariante par dilatation. Il est possible d'imposer 
 $\|\theta_c\|=1$ ou de normaliser la fonction de valeur (et de qualité) par 
@@ -355,7 +355,7 @@ $\hat{\mu}^{\pi_E}$). Néanmoins, avec une bonne représentation de la fonction 
 Finalement, si notre borne se base sur les erreurs en généralisation 
 $\epsilon_c$ et $\bar{\epsilon}_Q$, le classifieur n'utilisera 
 $(\hat{\mu}^{\pi_E}(s_i,a))_{1\leq i\leq N,a\in\A}$ que lors de la phase d'entraînement, où les $s_i$ sont les états présents dans $\D$. Il renvoie 
-$\theta_c$, vu comme une fonction de récompense, donc l'estimée de l'attribut moyen $\hat{\mu}^{\pi_E}$ n'est plus nécessaire après l'étape de CMC. Ainsi, en pratique, il est satisfaisant d'estimer 
+$\theta_c$, vu comme une fonction de récompense, donc l'estimée de l'attribut moyen $\hat{\mu}^{\pi_E}$ n'est plus nécessaire après l'étape de CMC. Ainsi, en pratique, il est suffisant d'estimer 
 $\hat{\mu}^{\pi_E}$ correctement uniquement pour les couples état-action $(s_i,a)_{1\leq i\leq
 N,a\in\A}$, ce qui permet d'envisager, par exemple, une simple estimation de Monte-Carlo.
 
@@ -369,8 +369,8 @@ SCIRL a besoin d'une estimée $\hat{\mu}^{\pi_E}$ de l'attribut moyen de l'exper
 $\mu^{\pi_E}$ est la fonction de qualité pour $\pi_E$ vis-à-vis de la fonction de récompense $\phi_i$: $\mu_i^{\pi_E}(s,a) = Q^{\pi_E}_{\phi_i}(s,a) =
 [T^a_{\phi_i} v^{\pi_E}_{\phi_i}](s)$. Nous présentons une revue rapide de méthodes de calcul exacte et approchées, ainsi qu'une heuristique.
 
-Si le modèle est connu, il est possible de calculer l'attribut moyen de manière exacte. Soit $\Phi\in\mathbb{R}^{|\s|\times p}$ la matrice d'attributs donc les lignes contiennent les vecteurs d'attributs $\phi(s)^\top$, pour tout
-$s\in\s$.
+Si le modèle (les probabilités de transition $P$) est connu, il est possible de calculer l'attribut moyen de manière exacte. Soit $\Phi\in\mathbb{R}^{|\s|\times p}$ la matrice d'attributs dont les lignes sont indexées par $s\in\s$ et contiennent les vecteurs d'attributs $\phi(s)^\top$.
+
 %
 %(equivalently, whose columns contain the basis functions $\phi_i$
 %for $1\leq i\leq p$).
@@ -518,7 +518,7 @@ Tous les algorithmes d'ARI à notre connaissance requièrent la résolution du p
 Le travail présenté dans \cite{Dvi010} ne s'applique qu'aux PDM solvables linéairement (où le contrôle se fait en imposant une dynamique au système).
 Dans~\cite{boularia011}, en utilisant l'argument de l'entropie relative, une fonction objectif est maximisée via une montée de sous-gradient. Estimer la valeur du sous-gradient demande des trajectoires échantillonnées selon la politique optimale pour la fonction de récompense courante. On peut contourner le problème grâce à l'échantillonage préférentiel. Cela requiert cependant d'échantillonner des trajectoires selon une politique différente de celle de l'expert, et le problème direct se maintient au coeur de l'approche (même si sa résolution est évitée).
 
-SCIRL n'a pas besoin de résoudre le problème direct, mais uniquement d'estimer l'attribut moyen de la politique de l'expert. Autrement dit, plutôt que de résoudre plusieurs fois le problème de l'optimisation d'une politique, nous ne résolvons qu'une seule fois un problème d'évaluation de politique. Cela amène des garanties théoriques (ce qui n'est pas le cas de tous les algorithmes d'ARI, par exemple~\cite{boularia011}). De plus, par l'utilisation d'une heuristique qui dépasse le cadre de notre analyse, il est possible à SCIRL de se contenter de données fournies par l'expert. La prochaine section présente une démonstration empirique de cela. Nous ne connaissons aucun autre algorithme d'ARI en mesure de fonctionner dans des conditions si drastiques.
+SCIRL n'a pas besoin de résoudre le problème direct, mais uniquement d'estimer l'attribut moyen de la politique de l'expert. Autrement dit, plutôt que de résoudre plusieurs fois le problème de l'optimisation d'une politique, nous ne résolvons qu'une seule fois un problème d'évaluation de politique\footnote{La résolution d'un MDP (en utilisant par exemple un algorithme d'\emph{itération de la valeur}) implique en effet de calculer de manière répétée la valeur d'une politique arbitraire. Résoudre plusieurs fois le MDP pour des récompenses arbitraires est donc beaucoup plus dur que d'estimer une fois pour toutes l'attribut moyen de l'expert.}. Cela amène des garanties théoriques (ce qui n'est pas le cas de tous les algorithmes d'ARI, par exemple~\cite{boularia011}). De plus, par l'utilisation d'une heuristique qui dépasse le cadre de notre analyse, il est possible à SCIRL de se contenter de données fournies par l'expert. La prochaine section présente une démonstration empirique de cela. Nous ne connaissons aucun autre algorithme d'ARI en mesure de fonctionner dans des conditions si drastiques.
 
 
 \section{Expériences}
@@ -534,7 +534,7 @@ Pour SCIRL et PIRL on discrétise l'espace d'état en un vecteur d'attribut pour
 
 On donne à SCIRL $n$ trajectoires de longueur $n$ (débutant dans un état choisi aléatoirement), $n$ allant de  $3$ à $20$ (ce qui donne de $9$ à
 $400$ transitions). Chaque expérience est répétée 50 fois. Le classifieur utilise les mêmes données que SCIRL. PIRL est un algorithme itératif dont chaque itération implique la résolution du PDM pour une fonction de récompense arbitraire. Nous l'avons fait fonctionner pendant 70 itérations, tous les objets requis (l'attribut moyen de politiques différentes de celles de l'expert et la politique optimale pour une fonction de récompense à chaque itération) ont été calculés de manière exacte en utilisant le modèle. Nous mesurons les performances de chacune des approches grâce à $\E_{s\sim \mathcal{U}}[v^\pi_{\R_E}(s)]$, avec $\mathcal{U}$
-la distribution uniforme (ce qui permet de tester la capacité de généralisation de chaque approche même pour des états infréquemment recontrés), $\R_E$ étant la récompense de l'expert et $\pi$ est l'une des politiques suivantes: la politique optimale pour $\R_E$ (point de référence haut),
+la distribution uniforme (ce qui permet de tester la capacité de généralisation de chaque approche même pour des états infréquemment rencontrés), $\R_E$ étant la récompense de l'expert et $\pi$ est l'une des politiques suivantes: la politique optimale pour $\R_E$ (point de référence haut),
 la politique optimale pour une récompense aléatoire (point de référence bas), la politique optimale pour $\R_{\theta_c}$ (SCIRL), la politique produite par PIRL et la règle de décision du classifieur.
 
 \begin{figure}[fies]{Problème de la conduite. La ligne la plus haute est la valeur de l'expert. Pour chaque courbe, nous dessinons la moyenne (trait plein), l'écart-type (foncé) et les valeurs min et max (plus clair). La politique correspondant à une récompense aléatoire est en bleu, la politique retournée par le classifieur est en jaune et la politique optimale pour la récompense trouvée par SCIRL est en rouge. La ligne bleue foncée correspond à PIRL.}
